--- a/als-node-client/src/test/resources/custom-validation/byDirectory/preserve-errors/expected/negative.yaml
+++ b/als-node-client/src/test/resources/custom-validation/byDirectory/preserve-errors/expected/negative.yaml
@@ -39,7 +39,7 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-errors/profile.yaml#/encodes/validations/scalar-parameters
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-errors/negative.data,Range(common.Position[L:23,C:6],common.Position[L:24,C:0]))
   -
     message: Property 'k' not supported in a RAML 1.0 webApi node
