--- a/als-node-client/src/test/resources/custom-validation/byDirectory/preserve-resolution-error/expected/negative.yaml
+++ b/als-node-client/src/test/resources/custom-validation/byDirectory/preserve-resolution-error/expected/negative.yaml
@@ -13,7 +13,7 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-resolution-error/profile.yaml#/encodes/validations/scalar-parameters
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-resolution-error/negative.data,Range(common.Position[L:9,C:6],common.Position[L:10,C:0]))
   -
     message: Scalars in parameters must have minLength defined
@@ -22,5 +22,5 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-resolution-error/profile.yaml#/encodes/validations/scalar-parameters
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-resolution-error/negative.data,Range(common.Position[L:20,C:6],common.Position[L:20,C:8]))
