--- a/als-node-client/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/expected/negative.yaml
+++ b/als-node-client/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/expected/negative.yaml
@@ -7,7 +7,7 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/profile.yaml#/encodes/validations/scalar-parameters
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
   -
     message: "Duplicate key : 'description'"
@@ -22,5 +22,5 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/profile.yaml#/encodes/validations/scalar-parameters
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/negative.data,Range(common.Position[L:19,C:6],common.Position[L:19,C:8]))
