--- a/als-node-client/src/test/resources/custom-validation/byDirectory/profile2/expected/negative.yaml
+++ b/als-node-client/src/test/resources/custom-validation/byDirectory/profile2/expected/negative.yaml
@@ -7,11 +7,11 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/profile2/profile.yaml#/encodes/validations/scalar-parameters
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile2/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
       -
-        message: error in nested nodes under shapes.schema
+        message: error in nested nodes under http://a.ml/vocabularies/shapes#schema
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile2/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
       -
-        message: error in nested nodes under apiContract.parameter
+        message: error in nested nodes under http://a.ml/vocabularies/apiContract#parameter
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile2/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
