--- a/als-node-client/src/test/resources/custom-validation/byDirectory/profile3/expected/negative.yaml
+++ b/als-node-client/src/test/resources/custom-validation/byDirectory/profile3/expected/negative.yaml
@@ -7,10 +7,10 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/profile.yaml#/encodes/validations/validation1
     relatedInformation:
       -
-        message: Error expected ["put","patch"] but got actual (actual=get) at apiContract.method
+        message: Error expected ["put","patch"] but got actual (actual=get) at http://a.ml/vocabularies/apiContract#method
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:13,C:2],common.Position[L:21,C:0]))
       -
-        message: error in nested nodes under apiContract.supportedOperation
+        message: error in nested nodes under http://a.ml/vocabularies/apiContract#supportedOperation
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:4,C:0],common.Position[L:21,C:0]))
   -
     message: Endpoints must have a POST method
@@ -19,10 +19,10 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/profile.yaml#/encodes/validations/validation1
     relatedInformation:
       -
-        message: Error expected ["put","patch"] but got actual (actual=get) at apiContract.method
+        message: Error expected ["put","patch"] but got actual (actual=get) at http://a.ml/vocabularies/apiContract#method
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:30,C:2],common.Position[L:39,C:0]))
       -
-        message: error in nested nodes under apiContract.supportedOperation
+        message: error in nested nodes under http://a.ml/vocabularies/apiContract#supportedOperation
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:21,C:0],common.Position[L:39,C:0]))
   -
     message: Endpoints must have a POST method
@@ -31,11 +31,11 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/profile.yaml#/encodes/validations/validation1
     relatedInformation:
       -
-        message: Error expected ["put","patch"] but got actual (actual=post) at apiContract.method
+        message: Error expected ["put","patch"] but got actual (actual=post) at http://a.ml/vocabularies/apiContract#method
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:48,C:2],common.Position[L:55,C:12]))
       -
-        message: Error expected ["put","patch"] but got actual (actual=get) at apiContract.method
+        message: Error expected ["put","patch"] but got actual (actual=get) at http://a.ml/vocabularies/apiContract#method
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:40,C:2],common.Position[L:48,C:0]))
       -
-        message: error in nested nodes under apiContract.supportedOperation
+        message: error in nested nodes under http://a.ml/vocabularies/apiContract#supportedOperation
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:39,C:0],common.Position[L:55,C:12]))
