--- a/als-node-client/src/test/resources/custom-validation/byDirectory/profile4/expected/negative.yaml
+++ b/als-node-client/src/test/resources/custom-validation/byDirectory/profile4/expected/negative.yaml
@@ -7,10 +7,10 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/profile4/profile.yaml#/encodes/validations/validation1
     relatedInformation:
       -
-        message: Error expected ["put","patch"] but got actual (actual=get) at apiContract.method
+        message: Error expected ["put","patch"] but got actual (actual=get) at http://a.ml/vocabularies/apiContract#method
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile4/negative.data,Range(common.Position[L:10,C:2],common.Position[L:15,C:0]))
       -
-        message: error in nested nodes under apiContract.supportedOperation
+        message: error in nested nodes under http://a.ml/vocabularies/apiContract#supportedOperation
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile4/negative.data,Range(common.Position[L:9,C:0],common.Position[L:15,C:0]))
   -
     message: Payload media type is mandatory
