--- a/als-node-client/src/test/resources/custom-validation/byDirectory/profile7/expected/negative.yaml
+++ b/als-node-client/src/test/resources/custom-validation/byDirectory/profile7/expected/negative.yaml
@@ -7,10 +7,10 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/profile7/profile.yaml#/encodes/validations/validation1
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile7/negative.data,Range(common.Position[L:9,C:6],common.Position[L:10,C:0]))
       -
-        message: error in nested nodes under apiContract.parameter / shapes.schema
+        message: error in nested nodes under http://a.ml/vocabularies/apiContract#parameter / http://a.ml/vocabularies/shapes#schema
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile7/negative.data,Range(common.Position[L:9,C:6],common.Position[L:10,C:0]))
   -
     message: Scalars in parameters must have minLength defined
@@ -19,8 +19,8 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/profile7/profile.yaml#/encodes/validations/validation1
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile7/negative.data,Range(common.Position[L:23,C:6],common.Position[L:24,C:0]))
       -
-        message: error in nested nodes under apiContract.parameter / shapes.schema
+        message: error in nested nodes under http://a.ml/vocabularies/apiContract#parameter / http://a.ml/vocabularies/shapes#schema
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile7/negative.data,Range(common.Position[L:23,C:6],common.Position[L:24,C:0]))
