--- a/als-node-client/src/test/resources/custom-validation/byDirectory/profile9/expected/negative.yaml
+++ b/als-node-client/src/test/resources/custom-validation/byDirectory/profile9/expected/negative.yaml
@@ -7,5 +7,5 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/profile9/profile.yaml#/encodes/validations/max-endpoints
     relatedInformation:
       -
-        message: Error expected 3 <= actual (actual=4) at apiContract.endpoint
+        message: Error expected 3 <= actual (actual=4) at http://a.ml/vocabularies/apiContract#endpoint
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/profile9/negative.data,Range(common.Position[L:2,C:0],common.Position[L:27,C:20]))
