--- a/als-node-client/src/test/resources/custom-validation/byDirectory/severities/expected/negative.yaml
+++ b/als-node-client/src/test/resources/custom-validation/byDirectory/severities/expected/negative.yaml
@@ -7,7 +7,7 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/profile.yaml#/encodes/validations/scalar-parameters-3
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
   -
     message: Violation
@@ -16,7 +16,7 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/profile.yaml#/encodes/validations/scalar-parameters-1
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
   -
     message: Warning
@@ -25,7 +25,7 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/profile.yaml#/encodes/validations/scalar-parameters-2
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
   -
     message: Info
@@ -34,7 +34,7 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/profile.yaml#/encodes/validations/scalar-parameters-3
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:17,C:6],common.Position[L:17,C:8]))
   -
     message: Violation
@@ -43,7 +43,7 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/profile.yaml#/encodes/validations/scalar-parameters-1
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:17,C:6],common.Position[L:17,C:8]))
   -
     message: Warning
@@ -52,5 +52,5 @@ diagnostics:
     code: file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/profile.yaml#/encodes/validations/scalar-parameters-2
     relatedInformation:
       -
-        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        message: Error expected 1 >= actual (actual=0) at http://a.ml/vocabularies/shapes#schema / http://www.w3.org/ns/shacl#minLength
         location: Location(file://als-node-client/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:17,C:6],common.Position[L:17,C:8]))
