--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
 version=5.2.0-SNAPSHOT
-amf=5.0.9
-amf.custom-validator.js=1.1.0
-amf.custom-validator-scalajs=0.3.0-platform-custom-validator-SNAPSHOT
+amf=5.0.10-RC.0
+amf.custom-validator.js=1.2.0
+amf.custom-validator-scalajs=0.3.0-RC.0
