--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
 version=5.2.0-SNAPSHOT
-amf=5.1.0-FREEZED-AST-SNAPSHOT
+amf=5.1.0-SNAPSHOT
 amf.custom-validator.js=1.2.0
-amf.custom-validator-scalajs=0.4.0-FREEZED-AST-SNAPSHOT
+amf.custom-validator-scalajs=0.4.0-SNAPSHOT
