--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
-version=5.2.0-SNAPSHOT-JSONSCHEMA
+version=5.2.0-SNAPSHOT
 amf=5.0.11-RC.0
 amf.custom-validator.js=1.2.1
 amf.custom-validator-scalajs=0.3.1-RC.0
