--- a/als-node-client/node-package/package.json
+++ b/als-node-client/node-package/package.json
@@ -15,6 +15,7 @@
     "als": "./dist/als-node-client.min.js"
   },
   "dependencies": {
+    "@aml-org/amf-antlr-parsers": "0.5.11",
     "@aml-org/amf-custom-validator": "1.2.1",
     "@aml-org/amf-custom-validator-web": "1.2.1",
     "ajv": "6.12.6",
