--- a/als-structure/js/package.json
+++ b/als-structure/js/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@aml-org/amf-antlr-parsers": "0.5.11",
     "ajv": "6.12.6"
   },
   "author": "",
