--- a/als-suggestions/js/package.json
+++ b/als-suggestions/js/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "ajv": "6.12.6"
+    "ajv": "6.12.6",
+    "@aml-org/amf-antlr-parsers": "0.5.11"
   },
   "author": "",
   "license": "ISC"
