W-11194616 Fixing breakline suggestion with annotation  within companion object

--- a/als-suggestions/shared/src/test/resources/test/raml10/aliased-semex/dialect.yaml
+++ b/als-suggestions/shared/src/test/resources/test/raml10/aliased-semex/dialect.yaml
@@ -22,6 +22,11 @@ annotationMappings:
     domain: shacl.NodeShape
     propertyTerm: fed.Key
     range:  FedKey
+  ScalarMapping:
+    domain: shacl.NodeShape
+    propertyTerm: fed.Key
+    range: string
 
 extensions:
   key: FedKeyMapping
+  scalar: ScalarMapping
