--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
 version=5.3.0-SNAPSHOT
-amf=5.1.0
+amf=5.1.0-0
 amf.custom-validator.js=1.2.2
-amf.custom-validator-scalajs=0.3.3
+amf.custom-validator-scalajs=0.3.3-0
