W-11968888: Fix sbt.build
Signed-off-by: Federico Mansilla <mansilla.fede@gmail.com>

--- a/als-suggestions/js/package.json
+++ b/als-suggestions/js/package.json
@@ -6,8 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "ajv": "6.12.6",
-    "@aml-org/amf-antlr-parsers": "0.5.18"
+    "@aml-org/amf-antlr-parsers": "0.5.18",
+    "ajv": "6.12.6"
   },
   "author": "",
   "license": "ISC"
