--- a/als-server/js/node-package/package.json
+++ b/als-server/js/node-package/package.json
@@ -15,6 +15,8 @@
     "build:dist": "webpack --config ./webpack.config.js"
   },
   "dependencies": {
+    "@aml-org/amf-antlr-parsers": "0.5.18",
+    "@aml-org/amf-custom-validator-web": "1.2.3",
     "ajv": "6.12.6",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
