--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
 version=5.4.0-SNAPSHOT
-amf=5.3.0-SNAPSHOT
+amf=5.2.1-RC.0
 amf.custom-validator.js=1.2.3
-amf.custom-validator-scalajs=0.3.4
+amf.custom-validator-scalajs=0.3.5-RC.0
 amf-antlr-parsers=0.5.18
