--- a/als-actions/shared/src/test/resources/actions/documentFormatting/yaml/expected/multiple-syntax-errors.yaml
+++ b/als-actions/shared/src/test/resources/actions/documentFormatting/yaml/expected/multiple-syntax-errors.yaml
@@ -1,10 +1,11 @@
 
 array:
   - valid
+  -/-invalid
 - still invalid
 
 key:
   val1: val
   val2: val
-syntax error
-  val22: 22
+  syntax error
+    val22: 22
