--- a/als-node-client/node-package/package.json
+++ b/als-node-client/node-package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aml-org/als-node-client",
-  "version": "5.1.0-SNAPSHOT",
+  "version": "5.1.0.1-SNAPSHOT",
   "description": "ALS Node Client",
   "main": "./dist/als-node-client.min.js",
   "types": "typescript/als-node-client.d.ts",
@@ -15,6 +15,9 @@
     "als": "./dist/als-node-client.min.js"
   },
   "dependencies": {
+    "@aml-org/amf-antlr-parsers": "0.5.18",
+    "@aml-org/amf-custom-validator": "1.2.3",
+    "@aml-org/amf-custom-validator-web": "1.2.3",
     "ajv": "6.12.6",
     "vscode-jsonrpc": "6.0.0",
     "vscode-languageserver-protocol": "3.16.0"
