rework maps and sequences to format mantaining style

--- a/als-actions/shared/src/test/resources/actions/documentFormatting/yaml/expected/basic-zero-range-selected.yaml
+++ b/als-actions/shared/src/test/resources/actions/documentFormatting/yaml/expected/basic-zero-range-selected.yaml
@@ -2,10 +2,7 @@ root: |
   this is a
   multi line string
 key:
-  seq:
-    - a
-    - b
-    - value
+  seq: [ a, b, value ]
   parent:
     son:
       grandchild: v
