--- a/als-actions/shared/src/test/resources/actions/documentFormatting/yaml/expected/start-inside-end.yaml
+++ b/als-actions/shared/src/test/resources/actions/documentFormatting/yaml/expected/start-inside-end.yaml
@@ -3,9 +3,6 @@ key:
     brother:
       k:
         v: k
-    sister:
-      - 1
-      - 2
-      - 3
+    sister: [ 1, 2, 3 ]
 root:
         preserve
