cleanup version & jenkinsfile to prepare PR

--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
-version=5.4.0-LUKI-FORMAT-SNAPSHOT
+version=5.4.0-SNAPSHOT
 amf=5.2.1
 amf.custom-validator.js=1.2.3
 amf.custom-validator-scalajs=0.3.5
