adopt amf 5.2.2 and custom validator 0.3.6 (#866)
* adopt amf 5.2.2 and custom validator 0.3.6

* bump amf model version in golden files

* bump antlr version

--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
 version=5.4.0-SNAPSHOT
-amf=5.2.2-RC.0
+amf=5.2.2
 amf.custom-validator.js=1.2.3
-amf.custom-validator-scalajs=0.3.6-RC.2
-amf-antlr-parsers=0.5.18
+amf.custom-validator-scalajs=0.3.6
+amf-antlr-parsers=0.6.21
