--- a/als-server/js/node-package/package.json
+++ b/als-server/js/node-package/package.json
@@ -18,7 +18,6 @@
     "@aml-org/amf-antlr-parsers": "0.6.21",
     "@aml-org/amf-custom-validator-web": "1.2.3",
     "ajv": "6.12.6",
-    "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
@@ -27,8 +26,7 @@
     "url": "^0.11.0",
     "util": "^0.12.4",
     "vscode-jsonrpc": "6.0.0",
-    "vscode-languageserver-protocol": "3.16.0",
-    "semver": "2.3.0"
+    "vscode-languageserver-protocol": "3.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
