--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
 version=5.4.0-SNAPSHOT
-amf=5.2.3
+amf=5.2.4-RC.0
 amf.custom-validator.js=1.3.0
-amf.custom-validator-scalajs=0.3.7
+amf.custom-validator-scalajs=0.3.8-RC.0
 amf-antlr-parsers=0.6.21
