--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
 version=5.4.0-SNAPSHOT
 amf=5.2.4
-amf.custom-validator.js=1.3.0
+amf.custom-validator.js=1.3.0-SNAPSHOT.96
 amf.custom-validator-scalajs=0.3.8
 amf-antlr-parsers=0.6.21
