--- a/als-server/js/node-package/package.json
+++ b/als-server/js/node-package/package.json
@@ -15,7 +15,7 @@
     "build:dist": "webpack --config ./webpack.config.js"
   },
   "dependencies": {
-    "@aml-org/amf-antlr-parsers": "0.6.22",
+    "@aml-org/amf-antlr-parsers": "0.6.22-SCALAJS1.6-SNAPSHOT",
     "@aml-org/amf-custom-validator": "1.3.0-SNAPSHOT.96",
     "@aml-org/amf-custom-validator-web": "1.3.0-SNAPSHOT.96",
     "ajv": "6.12.6",
