W-12585757/Adopt AMF: Bump AMF deps
Signed-off-by: Federico Mansilla <mansilla.fede@gmail.com>

--- a/als-actions/shared/src/test/resources/actions/hover/oas20-full-result.yaml
+++ b/als-actions/shared/src/test/resources/actions/hover/oas20-full-result.yaml
@@ -469,7 +469,7 @@ hovers:
   (128,10):
     - Logical and composition of data shapes
   (129,7):
-    - Logical and composition of data shapes
+    - Defines a data type
   (130,10):
     - Documentation for a particular part of the model
   (130,17):
