--- a/als-server/js/node-package/package.json
+++ b/als-server/js/node-package/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@aml-org/amf-antlr-parsers": "0.6.22-SCALAJS1.6-SNAPSHOT",
+    "@aml-org/amf-custom-validator": "1.3.0-SNAPSHOT.96",
     "@aml-org/amf-custom-validator-web": "1.3.0-SNAPSHOT.96",
     "ajv": "6.12.6",
     "buffer": "^6.0.3",
