--- a/als-actions/shared/src/test/resources/actions/hover/oas20-full-result.yaml
+++ b/als-actions/shared/src/test/resources/actions/hover/oas20-full-result.yaml
@@ -469,7 +469,7 @@ hovers:
   (128,10):
     - Logical and composition of data shapes
   (129,7):
-    - Defines a data type
+    - Logical and composition of data shapes
   (130,10):
     - Documentation for a particular part of the model
   (130,17):
