--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
-version=5.4.0-SNAPSHOT
-amf=5.2.5-RC.1
+version=5.3.5-RC.0
+amf=5.2.5
 amf.custom-validator.js=1.4.0
-amf.custom-validator-scalajs=0.4.0-SNAPSHOT
+amf.custom-validator-scalajs=0.3.9
 amf-antlr-parsers=0.6.22
