--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
 version=5.4.0-SNAPSHOT
-amf=5.2.5
+amf=5.2.5-0
 amf.custom-validator.js=1.4.0
 amf.custom-validator-scalajs=0.3.9
 amf-antlr-parsers=0.6.22
