--- a/als-server/js/node-package/package.json
+++ b/als-server/js/node-package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aml-org/als-server",
-  "version": "5.3.0",
+  "version": "5.2.0-SNAPSHOT",
   "description": "ALS Server Library",
   "main": "lib/als-server.js",
   "types": "typescript/als-server.d.ts",
@@ -15,9 +15,9 @@
     "build:dist": "webpack --config ./webpack.config.js"
   },
   "dependencies": {
-    "@aml-org/amf-antlr-parsers": "0.6.21",
-    "@aml-org/amf-custom-validator": "1.3.0",
-    "@aml-org/amf-custom-validator-web": "1.3.0",
+    "@aml-org/amf-antlr-parsers": "0.6.22",
+    "@aml-org/amf-custom-validator": "1.4.0",
+    "@aml-org/amf-custom-validator-web": "1.4.0",
     "ajv": "6.12.6",
     "buffer": "^6.0.3",
     "https-browserify": "^1.0.0",
