rc/v5.3.7: Change dependencies.properties
Signed-off-by: Federico Mansilla <mansilla.fede@gmail.com>

--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
-version=5.4.0-SNAPSHOT
-amf=5.2.6-RC.0
+version=5.3.7-RC
+amf=5.2.6
 amf.custom-validator.js=1.4.0
-amf.custom-validator-scalajs=0.3.10-RC.0
+amf.custom-validator-scalajs=0.3.10
 amf-antlr-parsers=0.6.22
