--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
-version=5.4.0-v1.1-SNAPSHOT
+version=5.4.0-SCALAJS1v1.1-SNAPSHOT
 amf=5.2.4-SCALAJS1.6-SNAPSHOT
 amf.custom-validator.js=1.3.0-SNAPSHOT.96
 amf.custom-validator-scalajs=0.3.8-SCALAJS1.6-SNAPSHOT
