--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
-version=5.4.0-SNAPSHOT
-amf=5.3.0-RC.2
+version=5.3.8-RC
+amf=5.3.0
 amf.custom-validator.js=1.4.0
-amf.custom-validator-scalajs=0.4.0-RC.1
+amf.custom-validator-scalajs=0.4.0
 amf-antlr-parsers=0.6.23
