--- a/als-common/js/package.json
+++ b/als-common/js/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@aml-org/amf-antlr-parsers": "0.6.22-SCALAJS1.6-SNAPSHOT",
+    "@aml-org/amf-antlr-parsers": "0.7.24",
     "ajv": "6.12.6"
   },
   "author": "",
