--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
-version=5.5.0-ACB-FO3-SNAPSHOT
+version=5.5.0-SNAPSHOT
 amf=5.4.0-1
 amf.custom-validator.js=1.4.0
 amf.custom-validator-scalajs=0.5.0-0
