--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
 version=5.5.0-SNAPSHOT
-amf=5.4.0-1
+amf=5.4.1-RC.0
 amf.custom-validator.js=1.4.0
-amf.custom-validator-scalajs=0.5.0-0
+amf.custom-validator-scalajs=0.5.1-RC.0
 amf-antlr-parsers=0.7.24
