--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
 version=6.1.0-SNAPSHOT
-amf=5.4.1
+amf=5.4.2-RC.0
 amf.custom-validator.js=1.4.0
-amf.custom-validator-scalajs=0.5.1
+amf.custom-validator-scalajs=0.5.2-RC.0
 amf-antlr-parsers=0.7.25
