--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
-version=6.1.0-SNAPSHOT
+version=6.1.0-cache-improvement-SNAPSHOT
 amf=5.4.5
 amf.custom-validator.js=1.5.0
 amf.custom-validator-scalajs=0.5.5
