--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
-version=6.1.0-SNAPSHOT
-amf=5.4.6-RC.0
-amf.custom-validator.js=1.5.0
-amf.custom-validator-scalajs=0.5.6-RC.0
+version=6.0.8-RC
+amf=5.4.6
+amf.custom-validator.js=1.6.0
+amf.custom-validator-scalajs=0.5.6
 amf-antlr-parsers=0.7.25
