--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
-version=6.1.0-SNAPSHOT
+version=6.1.0-RENDER-PROPS-2-SNAPSHOT
 amf=5.4.6-RC.0
 amf.custom-validator.js=1.5.0
 amf.custom-validator-scalajs=0.5.6-RC.0
