W-15610458: adopted old binding changes

--- a/als-suggestions/shared/src/test/resources/test/AsyncAPI2/by-directory/components/channel-bindings/amqp/amqp-binding-queue-props.yaml
+++ b/als-suggestions/shared/src/test/resources/test/AsyncAPI2/by-directory/components/channel-bindings/amqp/amqp-binding-queue-props.yaml
@@ -3,6 +3,7 @@ channels:
   user/{paramName}/signedup:
     bindings:
       amqp:
+        bindingVersion: 0.2.0
         is: queue
         queue:
           *
